--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isabel Garcia</title>
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=Great+Vibes&family=Playwrite+DK+Uloopet:wght@100..400&family=Playwrite+HR:wght@100..400&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -16,9 +22,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-warning bg-success p-2 text-dark bg-opacity-10">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#">Isabel Garcia</a>
+                <a class="navbar-brand text-black" href="#">Isabel García</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -26,19 +32,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-white" aria-current="page" href="#">Yo</a>
+                            <a class="nav-link active text-black" aria-current="page" href="#">Yo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#habilidades">Habilidades</a>
+                            <a class="nav-link text-black" href="#habilidades">Habilidades</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#proyecto">Proyectos</a>
+                            <a class="nav-link text-black" href="#proyecto">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#testimonio">Testimonio</a>
+                            <a class="nav-link text-black" href="#testimonio">Testimonio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="#contacto">Contacto</a>
+                            <a class="nav-link text-black" href="#contacto">Contacto</a>
                         </li>
 
                     </ul>
@@ -48,15 +54,24 @@
     </header>
 
     <main>
-        <section id="presentacion" class="px-4 pt-5 my-5 text-center border-bottom">
-            <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
-            <div class="col-lg-6 mx-auto">
+        <section id="presentacion" class="px-4 pt-5 my-0 text-center border-bottom">
+            <h1 class="display-4 fw-bold text-body-emphasis   baskervville-sc-regular "> Isabel García Contreras </h1>
+            <p>
+
+            </p>
+            <div class="col-lg-7 mx-auto">
                 <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the
                     world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive
                     grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+
+                <p>
+                   
+                </p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-                    <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Contactame</button>
-                    <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
+                    <button type="button"
+                        class="btn btn-outline-secondary bg-black bg-opacity-10 btn-lg px-4 me-sm-5">Contáctame</button>
+                    <button type="button"
+                        class="btn btn-outline-secondary bg-white bg-opacity-10 btn-lg px-4 me-sm-5">Secondary</button>
                 </div>
             </div>
             <div class="overflow-hidden" style="max-height: 30vh;">
@@ -102,10 +117,11 @@
             </div>
         </section>
 
-        <div id="proyectos" class="container marketing">
-
+        <section id="proyecto" class="container marketing">
+            <h2 class="pb-2 border-bottom"> Proyectos </h2>
             <!-- Three columns of text below the carousel -->
             <div class="row">
+
                 <div class="col-lg-4">
                     <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
@@ -118,124 +134,93 @@
                         رئيسة، هي: القدرة على التحليل، والقدرة على التأليف، والاستدلال المنطقي.</p>
                     <p><a class="btn btn-secondary" href="#">عرض التفاصيل</a></p>
                 </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                    </svg>
-                    <h2 class="fw-normal">عنوان آخر</h2>
-                    <p>إذا أردنا استخدام الحاسوب الذكي في معالجة اللغة العربية فإننا نجد أنفسنا أمام تحدٍّ كبير، خاصة
-                        وأن لغتنا تمتاز بتماسك منظوماتها وتداخلها، ومع ذلك فإن الذكاء الاصطناعي يمكّننا من الحصول على
-                        أربعة أنواع من المعالجة، هي: المعالجة الصوتية، والمعالجة الصرفية، والمعالجة النحوية، والمعالجة
-                        الدلالية.</p>
-                    <p><a class="btn btn-secondary" href="#">عرض التفاصيل</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-                        preserveAspectRatio="xMidYMid slice" focusable="false">
-                        <title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                    </svg>
-                    <h2 class="fw-normal">عنوان ثالث لتأكيد المعلومة</h2>
-                    <p>بفضل بحوث الذكاء الاصطناعي وتقنياته استطعنا الانتقال من مرحلة التعامل مع الفيزيائي إلى مرحلة
-                        التعامل مع المنطقي، وقد انعكس هذا الانتقال بصورة إيجابية على الكيفية التي تتعامل بها الشعوب مع
-                        لغاتها الحيَّة، وهذا يعني أنه يجب أن ينعكس بصورة إيجابية على كيفية تعاملنا مع لغتنا العربية.</p>
-                    <p><a class="btn btn-secondary" href="#">عرض التفاصيل</a></p>
-                </div><!-- /.col-lg-4 -->
+
             </div><!-- /.row -->
 
+        </section>
 
-
-            <section id="testimonios">
-                <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=""
-                            aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"
-                            class="active" aria-current="true"></button>
-                        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"
-                            class=""></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item">
-                            <svg class="bd-placeholder-img" width="100%" height="100%"
-                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
-                            <div class="container">
-                                <div class="carousel-caption text-start">
-                                    <h1>عنوان المثال.</h1>
-                                    <p class="opacity-75">تشير الدراسات الإحصائية حسب الجمعية الأمريكية للغات بأن
-                                        الإقبال
-                                        على العربية زاد %126 في الولايات المتحدة الأمريكية وحدها بين عامي 2002 و2009م.
-                                    </p>
-                                    <p><a class="btn btn-lg btn-primary" href="#">سجل اليوم</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item active">
-                            <svg class="bd-placeholder-img" width="100%" height="100%"
-                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
-                            <div class="container">
-                                <div class="carousel-caption">
-                                    <h1>عنوان مثال آخر.</h1>
-                                    <p>حسب المجلس الثقافي البريطاني فإن تعليم الإنجليزية داخل بريطانيا يسهم في تعزيز
-                                        اقتصادها بما يتجاوز ملياري جنيه سنوياً، كما أنه وفر أكثر من 26 ألف وظيفة.</p>
-                                    <p><a class="btn btn-lg btn-primary" href="#">أعرف أكثر</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <svg class="bd-placeholder-img" width="100%" height="100%"
-                                xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                            </svg>
-                            <div class="container">
-                                <div class="carousel-caption text-end">
-                                    <h1>واحد أكثر لقياس جيد.</h1>
-                                    <p>الإحصاءات لحجم الاستثمار اللغوي خارج بريطانيا تتفاوت من سنة لأخرى إلا أن المدير
-                                        التنفيذي للمجلس الثقافي البريطاني إدي بايرز يرى أن استثمار تعليم الإنجليزية في
-                                        الخارج لا يحسب على المستوى المالي فحسب بل على المستوى السياسي أيضاً.</p>
-                                    <p><a class="btn btn-lg btn-primary" href="#">تصفح المعرض</a></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">السابق</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">التالي</span>
-                    </button>
+        <section id="testimonio">
+            <div id="myCarousel" class="carousel carousel-dark slide mb-6 carousel-fade" data-bs-theme="dark"
+                data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=""
+                        aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"
+                        class="active" aria-current="true"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"
+                        class=""></button>
                 </div>
-            </section>
+
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+
+                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+
+                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+
+                        </svg>
+
+                        <div class="container">
+
+                            <div class="carousel-caption">
+
+                                <h1>Another example headline.</h1>
+
+                                <p>Some representative placeholder content for the second slide of the carousel.</p>
+
+                                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">السابق</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">التالي</span>
+                </button>
+            </div>
+        </section>
 
 
     </main>
 
-    <footer id="contacto" class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
-        </ul>
-        <p class="text-center text-body-secondary">© 2024 Company, Inc</p>
-    </footer>
+    <footer id="contacto" class="bg-black py-3" data-bs-theme="dark">
 
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+
+            <li class="nav-item fs-1">
+
+                <a href="https://github.com/malibb/" target="_blank" class="nav-link px-5 text-body-secondary">
+
+                    <i class="bi bi-github"></i>
+
+                </a>
+
+            </li>
+
+            <li class="nav-item fs-1">
+
+                <a href="https://github.com/malibb/" target="_blank" class="nav-link px-5 text-body-secondary">
+
+                    <i class="bi bi-linkedin"></i>
+
+                </a>
+
+            </li>
+
+        </ul>
+
+        <p class="text-center text-info-emphasis">© 2024 Isabel García Contreras</p>
+
+    </footer>
 
 
 
